@@ -35,7 +35,7 @@ specification = ../specification/sv-comp.spc
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
 
 # Write counterexample to file (required by competition).
