@@ -11,7 +11,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 cpa.value.symbolic.useSymbolicValues = true
 
 # Use MathSAT5 for use of bitvector theory
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = Bitvector
 cpa.predicate.encodeFloatAs = Float
 
