@@ -4,7 +4,7 @@ analysis.stopAfterError=False
 cpa.predicate.synthesizePrecisionOnAbstraction=False
 cpa.predicate.precision.sharing=FUNCTION
 
-cpa.predicate.solver=Z3
+solver.solver=Z3
 
 cpa.predicate.blk.alwaysAtFunctionHeads=False
 cpa.predicate.blk.alwaysAtEntryFunctionHead=True
