@@ -3,7 +3,7 @@
 analysis.algorithm.CEGAR = true
 
 cegar.refiner = cpa.predicate.PredicateRefiner
-cpa.predicate.interpolationSolver=SMTINTERPOL
+solver.interpolationSolver=SMTINTERPOL
 
 # Guessing predicates statically from the CFA is a heuristic that pays off.
 cpa.predicate.refinement.performInitialStaticRefinement = true
