@@ -23,8 +23,9 @@ cpa.bam.aggressiveCaching=false
 cpa.bam.handleRecursiveProcedures=true
 cpa.callstack.depth=1
 
+solver.solver=SMTINTERPOL
+
 # strategy is very important for recursion!
-cpa.predicate.solver=SMTINTERPOL
 cpa.predicate.refinement.strategy = tree
 
 # use additional symbols, needed for tree-interpolation (for some solvers)
