@@ -39,4 +39,4 @@ limits.time.cpu = 900s
 # output configuration
 statistics.print = false
 
-cpa.predicate.solver=MATHSAT5
+solver.solver=MATHSAT5
