@@ -32,5 +32,5 @@ output.disable=true
 cpa.arg.errorPath.file = ErrorPath.txt
 
 cpa.predicate.handlePointerAliasing = true
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
