@@ -31,7 +31,7 @@ specification = specification/sv-comp.spc
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
 
 # Disable all output files except the error path
