@@ -24,7 +24,7 @@ cpa.conditions.path.condition                 = AssignmentsInPathCondition
 cpa.conditions.path.assignments.softThreshold = 0
 cpa.conditions.path.assignments.hardThreshold = 22
 
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
 
 output.disable         = true
