@@ -33,5 +33,5 @@ cpa.callstack.skipFunctionPointerRecursion=true
 # (everything in this file is then ignored).
 memorysafety.config = sv-comp14--memorysafety.properties
 
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
