@@ -59,7 +59,8 @@ import com.google.common.collect.ImmutableMap;
 
 public class Mathsat5FormulaManager extends AbstractFormulaManager<Long, Long, Long> implements AutoCloseable {
 
-  @Options(prefix="cpa.predicate.solver.mathsat5")
+  @Options(deprecatedPrefix="cpa.predicate.solver.mathsat5",
+           prefix="solver.mathsat5")
   private static class Mathsat5Settings {
 
     @Option(secure=true, description = "List of further options which will be passed to Mathsat in addition to the default options. "
@@ -93,7 +94,8 @@ public class Mathsat5FormulaManager extends AbstractFormulaManager<Long, Long, L
   private final ShutdownNotifier shutdownNotifier;
   private final TerminationTest terminationTest;
 
-  @Options(prefix="cpa.predicate.solver.mathsat5")
+  @Options(deprecatedPrefix="cpa.predicate.solver.mathsat5",
+    prefix="solver.mathsat5")
   private static class ExtraOptions {
     @Option(secure=true, description="Load less stable optimizing version of"
         + " mathsat5 solver.")
